--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <a href="http://www.github.com/ltcarbonell" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                             </li>
 														<li>
-                                <a href="https://www.dropbox.com/s/142ok8t8jgg3vo7/ResumeLuisCarbonell.pdf?dl=1" class="btn-social btn-outline"><i class="fa fa-fw fa-file-pdf-o"></i></a>
+                                <a href="https://drive.google.com/file/d/0B2l2gzWj5yG2RTJsTTdwUmQ0UVk/view?usp=sharing" class="btn-social btn-outline"><i class="fa fa-fw fa-file-pdf-o"></i></a>
                             </li>
                         </ul>
                     </div>
